sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:14: error: not found: value cond
  }while (cond)
          ^